# symconstraints

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  BUILD  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yaml  pants.toml  pyproject.toml  ruff.toml
.github/workflows/: deploy.yaml  dist.yaml  docs.yaml  tests.yaml
docs/: BUILD  index.md
docs/reference/: constraints.md  mapping.md  operation.md  operator_mapping.md  pandas.md
src/symconstraints/: __init__.py  constraints.py  mapping.py  operation.py  operator_mapping.py  pandas.py
symconstraints/: BUILD  README.md  pyproject.toml
symconstraints/symconstraints/: __about__.py  __init__.py  constraints.py  operation.py
symconstraints/tests/: test_constraints.py  test_operation.py  test_operator_mapping.py
tests/: __init__.py  test_constraints.py
tests/symconstraints/: test_constraints.py  test_mapping.py  test_operation.py  test_operator_mapping.py  test_pandas.py
