[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symconstraints"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Abdelrahman Abdelrahman", email = "me@abogic.al" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sympy"
]

[project.urls]
Documentation = "https://github.com/Abogical/symconstraints#readme"
Issues = "https://github.com/Abogical/symconstraints/issues"
Source = "https://github.com/Abogical/symconstraints"

[tool.hatch.version]
path = "src/symconstraints/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/symconstraints tests}"

[tool.coverage.run]
source_pkgs = ["symconstraints", "tests"]
branch = true
parallel = true
omit = [
  "src/symconstraints/__about__.py",
]

[tool.coverage.paths]
symconstraints = ["src/symconstraints", "*/symconstraints/src/symconstraints"]
tests = ["tests", "*/symconstraints/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.lint]
extra-dependencies = [
  "pre-commit"
]

[tool.hatch.envs.lint.scripts]
install = 'pre-commit install'
update = 'pre-commit autoupdate'
run = 'pre-commit run --all-files'
